--- a/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
+++ b/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
@@ -10,7 +10,7 @@
   height: 100%;
   background: rgb(51,51,51);
   position: relative;
-  margin-right: 320px;
+  margin-right: 340px;
 }
 .photo-content {
   position: absolute;
@@ -21,8 +21,8 @@
 }
 /*相片*/
 .big-photo{
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 90%;
+  max-height: 90%;
   top: 45%;
   left: 50%;
   position: absolute;
@@ -164,10 +164,11 @@
   background: white;
   height: 100%;
   position: absolute;
-  width: 320px;
+  width: 340px;
   top: 0;
   right: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 /*相册用户相关信息*/
 .album-user-info{
@@ -175,11 +176,9 @@
   position: relative;
   border-bottom: solid 1px rgb(223,223,223);
   box-shadow: 0 0 5px rgb(200,200,200);
-  height:148px;
 }
 /*相册用户基本信息*/
 .album-user-base-info{
-
 }
 /*相册用户头像*/
 .album-user-profile{
@@ -211,7 +210,7 @@
 }
 /*相片名称*/
 .photo-name{
-  font-size: 12px;
+  font-size: 13px;
   color: rgb(130,130,130);
   margin-top: 3px;
 }
@@ -220,20 +219,22 @@
   font-size: 12px;
   color: rgb(100,100,100);
   margin-top: 20px;
+  margin-bottom: 10px;
   max-height: 60px;
   overflow: hidden;
   padding-right: 5px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+
 }
 /*相片动态操作*/
 .photo-art-operation{
   height: 30px;
-  margin-top: 10px;
   text-align: center;
   line-height: 30px;
+  width: 340px;
 }
 .photo-discussion{
-
-  overflow-y: auto;
-
+  margin-top: 10px;
 }
-
