--- a/src/app/person-center/component/album/show-photos/show-photos.component.html
+++ b/src/app/person-center/component/album/show-photos/show-photos.component.html
@@ -71,10 +71,10 @@
         <span [mdMenuTriggerFor]="photoMenu"><i class="material-icons photo-more-operation">more_horiz</i></span>
         <md-menu #photoMenu="mdMenu" class="photo-menu">
           <button md-menu-item class="photo-menu-btn" (click)="editPhotoInfo(photo)"><i class="material-icons photo-menu-i">mode_edit</i>编辑</button>
-          <button md-menu-item class="photo-menu-btn" ><i class="material-icons photo-menu-i">color_lens</i>特效</button>
+          <button md-menu-item class="photo-menu-btn"  (click)="updateWaterMark(i)"><i class="material-icons photo-menu-i">color_lens</i>特效</button>
           <button md-menu-item class="photo-menu-btn" (click)="updateAlbumCover(photo.path)"><i class="material-icons photo-menu-i">photo_library</i>设为封面</button>
           <button *ngIf="albums.length>1" md-menu-item class="photo-menu-btn" (click)="movePhoto(photo.photoId,i)"><i class="material-icons photo-menu-i" >zoom_out_map</i>移动到相册</button>
-          <button md-menu-item class="photo-menu-btn"><i class="material-icons photo-menu-i">delete</i>删除</button>
+          <button md-menu-item class="photo-menu-btn" (click)="deletePhoto(i)"><i class="material-icons photo-menu-i">delete</i>删除</button>
         </md-menu>
       </div>
     </div>
