--- a/src/app/person-center/component/note/note.component.html
+++ b/src/app/person-center/component/note/note.component.html
@@ -1,3 +1,171 @@
-<p>
-  note works!
-</p>
+<main class="note-main" [@flyXInOutFromRight]>
+  <!--日志操作开始-->
+  <div class="note-operation white-box">
+    <div class="note-operation-left">
+      <div class="note-operation-wrapper" (click)="toggleWriteNote()">
+        <button md-icon-button><i class="material-icons">mode_edit</i></button>
+        <span class="note-operation-label">写日志</span>
+      </div>
+      <div class="note-operation-wrapper">
+        <button md-icon-button><i class="material-icons">assignment</i></button>
+        <span class="note-operation-label">日志管理</span>
+      </div>
+    </div>
+    <div class="note-operation-right">
+      <div class="note-operation-wrapper">
+        <span class="note-operation-label-right">分类</span>
+        <md-select>
+          <md-option value="心情">心情</md-option>
+          <md-option>心情</md-option>
+          <md-option>心情</md-option>
+        </md-select>
+      </div>
+      <div class="note-operation-wrapper">
+        <md-slide-toggle color="primary">显示Ta的日志</md-slide-toggle>
+      </div>
+
+    </div>
+  </div>
+  <!--日志操作结束-->
+
+  <!--日志内容开始-->
+  <div class="note-content white-box" *ngIf="!showWriteNote" [@flyXInOutFromTop]>
+    <div class="note-wrapper">
+      <img class="note-user-profile" [src]="img">
+      <p class="note-title">我们一起走弹压而我却</p>
+      <div class="note-info">
+        <div class="note-info-wrapper">
+          <i class="material-icons">query_builder</i>
+          <span>2013-12-3 12:32</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">bookmark</i>
+          <span class="note-sort-label">我的俄方上哈之路</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">thumb_up</i>
+          <span>212</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">sms</i>
+          <span>321</span>
+        </div>
+
+      </div>
+    </div>
+    <div class="note-wrapper">
+      <img class="note-user-profile" [src]="img">
+      <p class="note-title">我们一起走弹压而我却</p>
+      <div class="note-info">
+        <div class="note-info-wrapper">
+          <i class="material-icons">query_builder</i>
+          <span>2013-12-3 12:32</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">bookmark</i>
+          <span class="note-sort-label">我的俄方上哈之路</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">thumb_up</i>
+          <span>212</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">sms</i>
+          <span>321</span>
+        </div>
+
+      </div>
+    </div>
+    <div class="note-wrapper">
+      <img class="note-user-profile" [src]="img">
+      <p class="note-title">我们一起走弹压而我却</p>
+      <div class="note-info">
+        <div class="note-info-wrapper">
+          <i class="material-icons">query_builder</i>
+          <span>2013-12-3 12:32</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">bookmark</i>
+          <span class="note-sort-label">我的俄方上哈之路</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">thumb_up</i>
+          <span>212</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">sms</i>
+          <span>321</span>
+        </div>
+
+      </div>
+    </div>
+    <div class="note-wrapper">
+      <img class="note-user-profile" [src]="img">
+      <p class="note-title">我们一起走弹压而我却</p>
+      <div class="note-info">
+        <div class="note-info-wrapper">
+          <i class="material-icons">query_builder</i>
+          <span>2013-12-3 12:32</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">bookmark</i>
+          <span class="note-sort-label">我的俄方上哈之路</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">thumb_up</i>
+          <span>212</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">sms</i>
+          <span>321</span>
+        </div>
+
+      </div>
+    </div>
+    <div class="note-wrapper">
+      <img class="note-user-profile" [src]="img">
+      <p class="note-title">我们一起走弹压而我却</p>
+      <div class="note-info">
+        <div class="note-info-wrapper">
+          <i class="material-icons">query_builder</i>
+          <span>2013-12-3 12:32</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">bookmark</i>
+          <span class="note-sort-label">我的俄方上哈之路</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">thumb_up</i>
+          <span>212</span>
+        </div>
+        <div class="note-info-wrapper">
+          <i class="material-icons">sms</i>
+          <span>321</span>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="write-note-content" *ngIf="showWriteNote" [@flyXInOutFromTop]>
+    <div class="write-note-title-wrapper">
+      <textarea class="note-title-textarea" placeholder="请输入日志标题"></textarea>
+    </div>
+    <div class="note-editor-wrapper">
+      <div class="note-editor" [froalaEditor]="editorOption"></div>
+    </div>
+    <div class="all-add-note-info">
+      <span class="add-note-info-label">分类:</span>
+      <md-select placeholder="选择日志分类">
+        <md-option *ngFor="let noteType of noteTypes" [value]="noteType">{{noteType}}</md-option>
+      </md-select>
+      <span class="add-note-info-label note-privacy-label">权限:</span>
+      <md-select placeholder="选择日志分类">
+        <md-option *ngFor="let noteType of noteTypes" [value]="noteType">{{noteType}}</md-option>
+      </md-select>
+      <button md-raised-button class="primary-btn publish-note-btn" color="primary"><i class="material-icons">publish</i>发布</button>
+      <button md-raised-button class="publish-note-btn">存为草稿</button>
+    </div>
+  </div>
+  <!--日志内容结束-->
+</main>
