--- a/src/app/login/component/invite-message/invite-message.component.html
+++ b/src/app/login/component/invite-message/invite-message.component.html
@@ -1,7 +1,7 @@
-<main>
+<main class="invite-main">
   <h3>情侣邀请</h3>
   <div id="message-body">
-    <img [src]="inviteMessage.profileImg"/>
+    <img [src]="api.IMAGE_PREFIX+inviteMessage.profileImg"/>
 
     <p>昵称：{{inviteMessage.nickname}}</p>
     <p>
