--- a/src/app/person-center/component/person-center/person-center.component.html
+++ b/src/app/person-center/component/person-center/person-center.component.html
@@ -10,7 +10,10 @@
     </a>
   </nav>
 </div>
-<router-outlet></router-outlet>
+<div class="person-center-wrapper">
+  <router-outlet></router-outlet>
+</div>
+
 
 
 
