--- a/src/app/foot-mark/component/single-art/single-art.component.html
+++ b/src/app/foot-mark/component/single-art/single-art.component.html
@@ -5,7 +5,7 @@
       <button md-icon-button>
         <i class="material-icons">keyboard_arrow_down</i>
       </button>
-      <md-menu #menu="mdMenu">
+      <md-menu #menu="mdMenu" class="custom-md-menu">
         <button md-menu-item (click)="deleteNotice()">
          <i class="material-icons">delete</i>
           <span>删除</span>
