--- a/src/styles.css
+++ b/src/styles.css
@@ -13,211 +13,12 @@
 /*ng2toastr*/
 @import "~ng2-toastr/bundles/ng2-toastr.min.css";
 
-/*修改material2默认样式*/
+/*自定义material样式*/
+@import "assets/css/custom-material.css";
 
-.mat-tab-link{/*tabs的标签页*/
-  width: 120px;
-  min-width: 100px!important;
-}
+/*应用全局样式*/
+@import "assets/css/app-style.css";
 
-.mat-ink-bar{ /*tabs下划线*/
-  background: red;
-}
-/*输入框前缀*/
-.input-prefix{
-  color: rgb(100,100,100);
-  margin-right: 10px;
-  font-size: 14px;
-}
+/*自定义editor全局样式*/
+@import "assets/css/custom-editor.css";
 
-/*
-material dialog
-*/
-.mat-dialog-container{
-  padding: 0!important;
-  max-width: 100%!important;
-}
-
-/*显示更多评论面板*/
-.more-discussion-panel{
-  position: absolute;
-  height: 90%;
-  width: 60%;
-}
-/*添加相片面板*/
-.add-photo-panel{
-  width: 80%;
-  height: 80%;
-}
-/*显示照片面板*/
-.show-photo-panel{
-  width: 90%;
-  height: 100%;
-  overflow: visible!important;
-}
-/*dialog背景*/
-.cdk-overlay-dark-backdrop{
-  background: rgb(141, 150, 165);
-  opacity: 0.71!important;
-}
-/*弹出框标题*/
-.dialog-title{
-  padding: 8px;
-  font-size: 15px;
-  border-bottom: 1px solid rgb(223,223,223);
-  box-shadow: 0 0 5px rgb(213,213,213);
-}
-.big-dialog-title{
-  padding: 10px;
-  border-bottom: 1px solid rgb(223,223,223);
-  box-shadow: 0 0 5px rgb(213,213,213);
-}
-.dialog-close{
-  float: right;
-  cursor: pointer;
-}
-
-/*material button*/
-.mat-button-wrapper{
-  min-width: 20px!important;
-}
-
-/*material select*/
-/*下拉选项高度设为自动*/
-.mat-option{
- height: auto;
-}
-/*下拉选项placeholder*/
-.mat-select-trigger{
-  font-size: 13px;
-  color: rgb(100,100,100);
-}
-
-/*material radio*/
-/*单选按钮变小*/
-.mat-radio-outer-circle{
-  transform: scale(0.8,0.8);
-}
-/**/
-.mat-sidenav-content{
-  overflow: hidden;
-}
-/*字体图片*/
-i{
-  vertical-align: middle;
-}
-
-/*上三角形边框*/
-.top-border-triangle:before{
-  box-sizing: content-box;
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: -16px;;
-  left: 5px;
-  padding:0;
-  border-bottom:8px solid #FFFFFF;
-  border-top:8px solid transparent;
-  border-left:8px solid transparent;
-  border-right:8px solid transparent;
-  display: block;
-  content:'';
-  z-index: 12;
-}
-.top-border-triangle:after{
-  box-sizing: content-box;
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: -18px;;
-  left: 4px;
-  padding:0;
-  border-bottom:9px solid #cccccc;
-  border-top:9px solid transparent;
-  border-left:9px solid transparent;
-  border-right:9px solid transparent;
-  display: block;
-  content:'';
-  z-index:10;
-}
-/*修改编辑器默认样式*/
-.fr-toolbar {
-  border-top:none;
-}
-
- .fr-top {
-  box-shadow: none;
-
-}
- /*不显示编辑器的快速插入*/
-.fr-quick-insert{
-  display: none;
-}
-/*动态中的表情和文字垂直居中*/
-.a-f{
-  vertical-align: middle;
-  margin-left: 3px;
-  margin-right: 3px;
-}
-/*自定义全局样式*/
-
-/*按钮颜色*/
-.primary-btn{
-  background: rgb(34,170,210)!important;
-}
-/*Box*/
-.white-box{
-  border: solid 1px rgb(223,223,223);
-  box-shadow: 0 0 3px rgb(213,213,213);
-  background: white;
-}
-/*滚动条样式*/
-::-webkit-scrollbar {
-  width: 8px;
-  height: 4px;
-  background-color: #F5F5F5;
-}
-/*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background: #fff ;
-}
-/*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color:rgba(0, 0, 0, 0.5);
-}
-::-webkit-scrollbar-thumb:hover {
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color:rgba(0, 0, 0, 0.3);
-}
-
-*{
-  margin: 0;
-  padding: 0;
-}
-
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons', serif;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
