--- a/src/app/login/component/login-body/login-body.component.html
+++ b/src/app/login/component/login-body/login-body.component.html
@@ -16,20 +16,19 @@
         <form (ngSubmit)="doLogin()" [formGroup]="loginForm">
           <!--账号-->
           <md-input-container color="accent">
-            <span mdPrefix>账号:</span>
+            <span class="input-prefix" mdPrefix>账号:</span>
             <input id="account" mdInput formControlName="account">
           </md-input-container>
 
           <!--密码-->
           <md-input-container color="accent">
-            <span mdPrefix>密码:</span>
+            <span class="input-prefix" mdPrefix>密码:</span>
             <input id="password" type="password" mdInput formControlName="passwords">
           </md-input-container>
           <div id="loginOpreation">
             <md-checkbox color="accent">记住账号</md-checkbox>
             <a id="lostPassword">忘记密码？</a>
           </div>
-
           <button type="submit" id="loginBtn" color="accent"  md-raised-button>登录</button>
         </form>
       </div>
