--- a/src/app/circle/component/circle-art-catalog/circle-art-catalog.component.html
+++ b/src/app/circle/component/circle-art-catalog/circle-art-catalog.component.html
@@ -31,5 +31,14 @@
       <i class="material-icons primary-icon">remove_red_eye</i>
       <span>123</span>
     </div>
+    <div class="circle-catalog-operation-wrapper" style="width: 70px">
+      <i class="material-icons primary-icon">date_range</i>
+      <span>3分钟钱</span>
+    </div>
+    <div class="circle-catalog-operation-wrapper">
+      <i class="material-icons primary-icon">bookmark</i>
+      <span>爱情大本因</span>
+    </div>
+
   </div>
 </main>
