--- a/src/app/person-center/component/note/catalog-note-list/catalog-note-list.component.html
+++ b/src/app/person-center/component/note/catalog-note-list/catalog-note-list.component.html
@@ -36,7 +36,7 @@
   </div>
   <!--日志内容结束-->
   <div  [@flyXInOutFromTop] *ngIf="showWriteNote">
-    <app-add-note [editorNoteArgs]="editorNoteArgs"></app-add-note>
+    <app-add-note [editNoteArgs]="editorNoteArgs"></app-add-note>
   </div>
 
 </main>
