--- a/src/app/person-center/component/note/preview-note/preview-note.component.html
+++ b/src/app/person-center/component/note/preview-note/preview-note.component.html
@@ -4,8 +4,8 @@
     <span class="dialog-close" (click)="close.click()"><i class="material-icons">close</i></span>
   </div>
   <div class="preview-note-all-content" [ngStyle]="{'max-height.px':getNoteHeight()}">
-    <div class="preview-note-title">{{note.title}}</div>
-    <div class="preview-note-content"  [froalaView]="note.content"></div>
+    <div class="preview-note-title">{{editArgs.title}}</div>
+    <div class="preview-note-content"  [froalaView]="editArgs.content"></div>
   </div>
 
   <button md-dialog-close style="display: none" #close></button>
